gitops/platform/hubble/authentik-callback-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: authentik-server
  namespace: kube-system
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
  type: ClusterIP
