gitops/platform/hubble/authentik-callback-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: hubble-authentik-callback
  namespace: kube-system
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`hubble.bierineenweek.nl`) && PathPrefix(`/outpost.goauthentik.io`)
      services:
        - kind: Service
          name: authentik-server
          namespace: authentik
          port: 80
  tls: {}
